--- a/VerilogGitHomework.ipynb
+++ b/VerilogGitHomework.ipynb
@@ -42,10 +42,23 @@
         "%load_ext plugin"
       ],
       "metadata": {
-        "id": "qLFl056PzboQ"
+        "id": "qLFl056PzboQ",
+        "outputId": "fd0f38ce-c17f-4f09-bb16-ee860c97385a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The plugin extension is already loaded. To reload it, use:\n",
+            "  %reload_ext plugin\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -108,11 +121,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "z2bL6zI9zUfj"
+        "id": "z2bL6zI9zUfj",
+        "outputId": "70301e21-a2ff-4191-d2ff-f0d5db2814fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "VCD info: dumpfile decade_counter.vcd opened for output.\n",
+            "                   0 clk=0,rst=0,count[3:0]=xxxx,ten=x\n",
+            "                  10 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  20 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  30 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  40 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  50 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  60 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  70 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  80 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                  90 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 100 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 110 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 120 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 130 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 140 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 150 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 160 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 170 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 180 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 190 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 200 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 210 clk=1,rst=0,count[3:0]=xxxx,ten=0\n",
+            "                 220 clk=0,rst=0,count[3:0]=xxxx,ten=0\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "%%verilog\n",
         "\n",
@@ -126,7 +175,24 @@
         "\n",
         "//YOUR CODE HERE\n",
         "\n",
+        "reg [3:0] count;\n",
+        "reg ten;\n",
+        "\n",
+        "always @(posedge clk) begin\n",
+        "    if (rst) begin\n",
+        "        count <= 4'b0000;\n",
+        "        ten <= 1'b0;\n",
+        "    end else if (count == 4'b1001) begin\n",
+        "        count <= 4'b0000;\n",
+        "        ten <= 1'b1;\n",
+        "    end else begin\n",
+        "        count <= count + 1'b1;\n",
+        "        ten <= 1'b0;\n",
+        "    end\n",
+        "end\n",
+        "\n",
         "endmodule\n",
+        "\n",
         "////\n",
         "\n",
         "//!DO NOT EDIT MODULE NAME AND PORT NAME!\n",
@@ -146,17 +212,61 @@
         "\n",
         "always begin\n",
         "\n",
-        "    //YOUR CODE HERE - Generate 20 unit time clock;\n",
+        "    #10 clk=~clk; //YOUR CODE HERE - Generate 20 unit time clock;\n",
         "\n",
         "end\n",
         "\n",
         "initial begin\n",
+        "    $dumpfile(\"decade_counter.vcd\");\n",
+        "    $dumpvars(0, decade_counter_tb);\n",
+        "    clk = 1'b0;\n",
+        "    rst = 1'b0;\n",
+        "    #20 rst = 1'b0;\n",
+        "    #200 $finish;\n",
         "\n",
         "    //YOUR CODE HERE - Initialize the clk, rst;\n",
         "\n",
         "end\n",
         "\n",
-        "endmodule\n"
+        "    initial\n",
+        "    $monitor($time, \" clk=%b,rst=%b,count[3:0]=%b,ten=%b\",clk,rst,count,ten);\n",
+        "\n",
+        "endmodule"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%waveform decade_counter.vcd\n",
+        "-signals clk, rst, count, ten\n",
+        "-time 200"
+      ],
+      "metadata": {
+        "id": "l9a9WgXG0Lea",
+        "outputId": "0443adae-adb4-4db1-90b7-4cee4be74e9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 488
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "unmatched ']' (<string>, line 1)",
+          "traceback": [
+            "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.11/dist-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3553\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+            "  File \u001b[1;32m\"<ipython-input-52-b7db11f30e3c>\"\u001b[0m, line \u001b[1;32m1\u001b[0m, in \u001b[1;35m<cell line: 0>\u001b[0m\n    get_ipython().run_cell_magic('waveform', 'decade_counter.vcd', '-signals clk, rst, count, ten\\n-time 200\\n')\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.11/dist-packages/google/colab/_shell.py\"\u001b[0m, line \u001b[1;32m334\u001b[0m, in \u001b[1;35mrun_cell_magic\u001b[0m\n    return super().run_cell_magic(magic_name, line, cell)\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.11/dist-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2473\u001b[0m, in \u001b[1;35mrun_cell_magic\u001b[0m\n    result = fn(*args, **kwargs)\n",
+            "  File \u001b[1;32m\"<decorator-gen-167>\"\u001b[0m, line \u001b[1;32m2\u001b[0m, in \u001b[1;35mwaveform\u001b[0m\n",
+            "  File \u001b[1;32m\"/usr/local/lib/python3.11/dist-packages/IPython/core/magic.py\"\u001b[0m, line \u001b[1;32m187\u001b[0m, in \u001b[1;35m<lambda>\u001b[0m\n    call = lambda f, *a, **k: f(*a, **k)\n",
+            "\u001b[0;36m  File \u001b[0;32m\"/content/cad4u/hdl/hdl.py\"\u001b[0;36m, line \u001b[0;32m99\u001b[0;36m, in \u001b[0;35mwaveform\u001b[0;36m\u001b[0m\n\u001b[0;31m    exec(s)\u001b[0m\n",
+            "\u001b[0;36m  File \u001b[0;32m\"<string>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    -signals clk, rst, count, ten]\u001b[0m\n\u001b[0m                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ']'\n"
+          ]
+        }
       ]
     },
     {
